# para_training

./: .env  Cargo.toml  run_backend
keys/: para-student-key.pem  para-student.pem
migrations/2022-11-04-152156_app_users/: down.sql  up.sql
migrations/2022-11-08-202307_student/: down.sql  up.sql
src/: error_handler.rs  main.rs
src/db/: app_user.rs  app_users.rs  connection.rs  mod.rs  models.rs  schema.rs  students.rs
src/rest/: app_users.rs  mod.rs  students.rs
src/security/: auth.rs  login.rs  mod.rs  tls.rs
