[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-web = "4.2"
actix-identity = "0.5"
actix-session = { version = "0.7", features = ["redis-actor-session"] }
actix-redis = "0.12.0"
##
#actix-casbin = {version = "0.4.2",features = ["runtime-tokio"]}
#actix-casbin-auth = {version="0.4.4",features = ["runtime-tokio"]}
casbin = "2.0.9"

#tls
rustls = { version = "0.20", optional = true }
rustls-pemfile = { version = "1.0", optional = true }


diesel = { version = "2.0", features = ["postgres", "r2d2"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }

serde_json = "1.0"


#pattern
once_cell = "1.13"
cfg_block = "0.1.1"
lazy_static = "1.4"
dotenvy = "0.15"
anyhow = "1.0"
env_logger = "0.9.1"
log = "0.4.17"
