[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
dfault = []

[dependencies]
actix = "0.13"
actix-web-httpauth = "0.8"
actix-redis = "0.12.0"
actix-identity = "0.5"
actix-web = { version = "4.2", features = ["rustls"] }
actix-session = { version = "0.7", features = ["redis-actor-session"] }
r2d2 = "0.8"

listenfd = "1.0.0"
chrono = { version = "0.4", features = ["serde"] }

##
#actix-casbin = {version = "0.4.2",features = ["runtime-tokio"]}
#actix-casbin-auth = {version="0.4.4",features = ["runtime-tokio"]}
casbin = "2.0.9"

#tls
rustls = { version = "0.20" }
rustls-pemfile = { version = "1.0" }


diesel = { version = "2.0", features = ["postgres", "r2d2", "extras", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }

serde_json = "1.0"


#pattern
cfg_block = "0.1.1"
lazy_static = "1.4"
dotenvy = "0.15"
anyhow = "1.0"
env_logger = "0.9.1"
log = "0.4.17"
